# linkedin-safebot

./: .gitignore  Estructura  LICENSE  README.md  config.json.example  pyproject.toml  requirements.txt
scripts/: install_chromedriver.py
src/: linkedin_bot.py
